--- a/fleas/index.html
+++ b/fleas/index.html
@@ -12,9 +12,12 @@
     <!-- Library script(s) -->
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
+    <script src="js/libraries/phaser.min.js"></script>
 
     <!-- My script(s) -->
-    <script src="js/script.js"></script>
+    <script src="js/Boot.js"></script>
+    <script src="js/Play.js"></script>
+    <script src="js/main.js"></script>
   </head>
 
   <body>
