--- a/fleas/index.html
+++ b/fleas/index.html
@@ -7,21 +7,28 @@
     <title>FLEAS!</title>
 
     <!-- CSS stylesheet(s) -->
+
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
+    <!-- My font(s) -->
+
+    <div style="font-family:font"></div>
+
     <!-- Library script(s) -->
+
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
     <script src="js/libraries/phaser.min.js"></script>
 
+  </head>
+
+  <body style="background-color:#dd9d50"> 
+    
     <!-- My script(s) -->
+
     <script src="js/Boot.js"></script>
     <script src="js/Play.js"></script>
     <script src="js/main.js"></script>
-  </head>
-
-  <body>
-    <!-- HTML would go here if needed. -->
-  </body>
-
+  </body> 
+  
 </html>
